--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,17 +8,30 @@ html, body {
 .game {
   width: 600px;
   height: 600px;
-  margin: 0 auto;
-  /*margin-left: 460px;*/
+  position: absolute;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 
 
 #howtoplay {
   text-align: center;
-  background-color:gray;
-  width: 300px;
+  background-color: rgba(160, 160, 160, 0.4);
+  /*background-color:gray;*/
+  width: 325px;
   height: 300px;
-  float: left;
   color: white;
-  margin: 0 auto;
+  float: right;
+  top: 0;
+  bottom: 0;
+  right: 10px;
+  margin: auto;
+  position: absolute;
+}
+
+.leftAlign {
+  text-align: left;
 }
