--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,6 +3,7 @@ html, body {
   height: 100%;
   overflow: hidden;
   background: #000;
+  font-family: 'Chewy', cursive;
 }
 
 .game {
@@ -19,9 +20,9 @@ html, body {
 
 #howtoplay {
   text-align: center;
-  background-color: rgba(160, 160, 160, 0.4);
+  /*background-color: rgba(160, 160, 160, 0.4);*/
   /*background-color:gray;*/
-  width: 325px;
+  width: 340px;
   height: 300px;
   color: white;
   float: right;
