--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,6 +15,8 @@ html, body {
   left: 0;
   right: 0;
   margin: auto;
+  border: 10px solid purple;
+  border-radius: 25px;
 }
 
 
@@ -35,4 +37,17 @@ html, body {
 
 .leftAlign {
   text-align: left;
+}
+
+#hideshow {
+  opacity: 0.3;
+  float: right;
+  top: 70%;
+  right: 10%;
+  bottom: 0;
+  margin: auto;
+  position: relative;
+}
+#hideshow:hover {
+  opacity: 1.0;
 }
